使用 Colaboratory 创建

--- a/lab5_3.ipynb
+++ b/lab5_3.ipynb
@@ -6,7 +6,7 @@
       "name": "lab5.3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPCXV/8IwT/X4hDFhEJza/0",
+      "authorship_tag": "ABX9TyP+pGlwa04+bMBWVXxoaOI6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "#You can enable GPU here (cuda); or just CPU\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\") "
       ],
-      "execution_count": 2,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -73,7 +73,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "text_train,text_test,label_train,label_test = train_test_split(raw_text,raw_label,test_size=0.25,random_state=42) #test_size=0.25表示取了四分之一的数据来测试模型"
       ],
-      "execution_count": 3,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
         "text_train = [s.lower() for s in text_train]\n",
         "text_test = [s.lower() for s in text_test]"
       ],
-      "execution_count": 4,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -103,7 +103,7 @@
         "text_train = [remove_punctuation_re(s) for s in text_train]\n",
         "text_test = [remove_punctuation_re(s) for s in text_test]"
       ],
-      "execution_count": 5,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "37b9994a-2440-4aa3-b66f-dd9343cc59eb"
+        "outputId": "e7066420-c6a9-4828-dd30-24ead858ac15"
       },
       "source": [
         "#token\n",
@@ -137,7 +137,7 @@
         "text_train = word_tokenize(str(sent_tokenize(str(text_train))))\n",
         "text_test = word_tokenize(str(sent_tokenize(str(text_test))))"
       ],
-      "execution_count": 9,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7cc7deef-0be8-49d5-dfb3-201e5edb0207"
+        "outputId": "e9e10e53-8415-4e1b-fc2b-1c7fdd44f0b3"
       },
       "source": [
         "#remove\n",
@@ -175,7 +175,7 @@
         "  text_train_ns.append(filtered_sentence)\n",
         "    #Please complete this"
       ],
-      "execution_count": 10,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,13 +199,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UHjLPyhLnGMx"
+        "id": "UHjLPyhLnGMx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d297feed-28f3-4f19-812d-e9a39da1aaea"
       },
       "source": [
-        "text_train_ns"
+        "text_train_ns[10:20]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[['r'], [\"'\"], [','], [\"'\"], [], [], ['1', '7'], ['r'], ['r'], ['x', 'p']]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -214,33 +231,33 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1cb7e299-1324-4706-a40c-f029967a03d0"
+        "outputId": "16ec2150-5fe6-4696-c4c6-a6998ae52406"
       },
       "source": [
         "text_train[10:20]#,"
       ],
-      "execution_count": 9,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[',',\n",
+              "['matter',\n",
+              " \"'\",\n",
+              " ',',\n",
               " \"'sevilzadeh\",\n",
               " 'mohammed',\n",
               " 'led',\n",
               " '17',\n",
               " 'major',\n",
               " 'military',\n",
-              " 'expeditions',\n",
-              " 'most',\n",
-              " 'offensive']"
+              " 'expeditions']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 20
         }
       ]
     },
@@ -261,7 +278,20 @@
         "id": "8JmMjdP7moA3"
       },
       "source": [
-        ""
+        "171     def addSentence(self, sentence):\n",
+        "172         for word in sentence.split(' '):\n",
+        "173             self.addWord(word)  # 用于添加单词\n",
+        "174 \n",
+        "175     def addWord(self, word):\n",
+        "176         if word not in self.word2index:  # 是不是新的词\n",
+        "177             # 如果不在word2index里，则需要新的定义字典\n",
+        "178             self.word2index[word] = self.n_words\n",
+        "179             self.word2count[word] = 1\n",
+        "180             self.index2word[self.n_words] = word\n",
+        "181             self.n_words += 1  # 相当于每次index+1\n",
+        "182         else:\n",
+        "183             self.word2count[word] += 1  # 计算每次词的个数\n",
+        "2"
       ],
       "execution_count": null,
       "outputs": []
