使用 Colaboratory 创建

--- a/L6_2.ipynb
+++ b/L6_2.ipynb
@@ -6,7 +6,7 @@
       "name": "L6.2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMwdV6LUzBcetTcc51xhhDb",
+      "authorship_tag": "ABX9TyNkWTDvypKrx4EwP/VZmj5x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p2ZM7LLTTRXO"
+      },
+      "source": [
+        "dHMM 什么是隐形：part of speech，什么是显性：单词"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nHXmDjxQg_y0",
-        "outputId": "01c64426-c5bd-420f-d4fc-51b194e94b46"
+        "outputId": "3c59fc4d-43b1-4445-cf8d-dcfd71e4ecf5"
       },
       "source": [
         "import nltk\n",
@@ -48,15 +57,9 @@
         "\n",
         "# Downloading required corpus\n",
         "nltk.download('punkt')\n",
-        "\n",
-        "\n",
-        "from nltk import word_tokenize\n",
-        "from nltk.corpus import brown\n",
-        "import pprint\n",
-        "brown_tagged_sents = brown.tagged_sents(categories='news')\n",
-        "brown_sents = brown.sents(categories='news')"
+        "from nltk import word_tokenize"
       ],
-      "execution_count": 1,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,9 +67,7 @@
             "[nltk_data] Downloading package brown to /root/nltk_data...\n",
             "[nltk_data]   Package brown is already up-to-date!\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
-            "[nltk_data] Downloading package brown to /root/nltk_data...\n",
-            "[nltk_data]   Package brown is already up-to-date!\n"
+            "[nltk_data]   Package punkt is already up-to-date!\n"
           ],
           "name": "stdout"
         }
@@ -75,11 +76,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "M7V6CH7PhGEF",
-        "outputId": "792bdf54-71fc-4eee-b368-46b86e54d7a8"
+        "id": "M7V6CH7PhGEF"
       },
       "source": [
         "\n",
@@ -103,16 +100,8 @@
         "cfd_tags= nltk.ConditionalFreqDist(nltk.bigrams(brown_tags))\n",
         "cpd_tags = nltk.ConditionalProbDist(cfd_tags, nltk.MLEProbDist)\n"
       ],
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "<ConditionalProbDist with 146 conditions>\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 97,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -121,7 +110,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WijoHCVzhLD-",
-        "outputId": "ca0d30e7-63ee-4474-aa85-3bc37c174df8"
+        "outputId": "eaa3a516-0739-4536-9887-da113b9b3853"
       },
       "source": [
         "#要的***\n",
@@ -137,7 +126,6 @@
         "  for l in range(sentlen):\n",
         "    token = []\n",
         "    viterbi = [ ]\n",
-        "    token = []\n",
         "    backpointer = [ ]\n",
         "\n",
         "    first_viterbi = { }\n",
@@ -175,7 +163,7 @@
         "print(sentence)\n",
         "print(test_model(sentence))"
       ],
-      "execution_count": 15,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,47 +178,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "m0d6JVd0hO4I"
+        "id": "p5sVH1tT2P8e"
       },
       "source": [
-        "\n",
-        "brown_tags_words = []\n",
-        "brown_tagged_sents = brown.tagged_sents()\n",
-        "\n",
-        "for sent in brown_tagged_sents:\n",
-        "    # sent is a list of word/tag pairs\n",
-        "    # add START/START at the beginning\n",
-        "    brown_tags_words.append( (\"START\", \"START\") )\n",
-        "    # then all the tag/word pairs for the word/tag pairs in the sentence.\n",
-        "    # shorten tags to 2 characters each\n",
-        "    brown_tags_words.extend([ (tag[:2], word) for (word, tag) in sent ])\n",
-        "    # then END/END\n",
-        "    brown_tags_words.append( (\"END\", \"END\") )\n",
-        "\n",
-        "# conditional frequency distribution\n",
-        "cfd_tagwords = nltk.ConditionalFreqDist(brown_tags_words)\n",
-        "# conditional probability distribution\n",
-        "cpd_tagwords = nltk.ConditionalProbDist(cfd_tagwords, nltk.MLEProbDist)\n",
-        "\n",
-        "print(\"The probability of an adjective (JJ) being 'new' is\", cpd_tagwords[\"JJ\"].prob(\"new\"))\n",
-        "print(\"The probability of a verb (VB) being 'duck' is\", cpd_tagwords[\"VB\"].prob(\"duck\"))\n",
-        "\n",
-        "# Estimating P(ti | t{i-1}) from corpus data using Maximum Likelihood Estimation (MLE):\n",
-        "# P(ti | t{i-1}) = count(t{i-1}, ti) / count(t{i-1})\n",
-        "brown_tags = [tag for (tag, word) in brown_tags_words ]\n",
-        "\n",
-        "# make conditional frequency distribution:\n",
-        "# count(t{i-1} ti)\n",
-        "cfd_tags= nltk.ConditionalFreqDist(nltk.bigrams(brown_tags))\n",
-        "# make conditional probability distribution, using\n",
-        "# maximum likelihood estimate:\n",
-        "# P(ti | t{i-1})\n",
-        "cpd_tags = nltk.ConditionalProbDist(cfd_tags, nltk.MLEProbDist)\n",
-        "\n",
-        "\n",
-        "print(\"If we have just seen 'DT', the probability of 'NN' is\", cpd_tags[\"DT\"].prob(\"NN\"))\n",
-        "print( \"If we have just seen 'VB', the probability of 'JJ' is\", cpd_tags[\"VB\"].prob(\"DT\"))\n",
-        "print( \"If we have just seen 'VB', the probability of 'NN' is\", cpd_tags[\"VB\"].prob(\"NN\"))"
+        "# DT, NN, VBZ(BEZ),NN(JJ), , ,  PRP(PPS),VBP(VB),TO,VB,RB(OL),.; DT,NN,VBZ(BEZ),JJ, , , PRP(PPS), VBP(DO), RB(*),VB,TO,VB,./"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lhX_PR4EXPlJ"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
