使用 Colaboratory 创建

--- a/E9_2.ipynb
+++ b/E9_2.ipynb
@@ -65,7 +65,7 @@
         "        downloaded = drive.CreateFile({\"id\": fileId[1]})\n",
         "        downloaded.GetContentFile(fileId[0])"
       ],
-      "execution_count": 37,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -90,7 +90,7 @@
         "except:\n",
         "  downloadFiles([[\"test.txt\", \"1V-LQuJWT62aCytYuhZuaxvICsqiF1rdK\"]])"
       ],
-      "execution_count": 38,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -123,7 +123,7 @@
         "validation_data, target_y_validation = read_data(\"validation.txt\",50)\n",
         "test_data, target_y_test = read_data(\"test.txt\",50)"
       ],
-      "execution_count": 39,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -133,14 +133,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "af05a30e-8d8a-44c6-9389-40155c289e6f"
+        "outputId": "9e7d78e5-071a-4a51-bb18-5621879c0096"
       },
       "source": [
         "print(len(train_data))\n",
         "print(train_data[1])\n",
         "print(target_y_train[1])"
       ],
-      "execution_count": 40,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +175,7 @@
         "        if tag not in tag_to_ix:\n",
         "            tag_to_ix[tag] = len(tag_to_ix)\n"
       ],
-      "execution_count": 41,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -221,7 +221,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4762c246-a87e-444b-e00f-c523d64fb73a"
+        "outputId": "46cda944-ee65-42d9-9103-72ce29476eb2"
       },
       "source": [
         "import gensim.downloader as api\n",
@@ -240,8 +240,15 @@
         "embedding_matrix = np.array(embedding_matrix)\n",
         "embedding_matrix.shape"
       ],
-      "execution_count": 42,
+      "execution_count": 6,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[==================================================] 100.0% 104.8/104.8MB downloaded\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "stream",
           "text": [
@@ -260,7 +267,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 6
         }
       ]
     },
@@ -283,7 +290,7 @@
         "test_input_index = to_index(test_data,word_to_ix)\n",
         "test_output_index = to_index(target_y_test,tag_to_ix)"
       ],
-      "execution_count": 43,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -467,7 +474,7 @@
         "        score, tag_seq = self._viterbi_decode(lstm_feats)\n",
         "        return score, tag_seq"
       ],
-      "execution_count": 44,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -649,9 +656,10 @@
       "metadata": {
         "id": "a0CMFVSwlLru",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 236
         },
-        "outputId": "077e2611-6cf4-4047-d482-782c5994bd0c"
+        "outputId": "db19bf47-4c5e-4b08-a080-942d8ae4d772"
       },
       "source": [
         "\"\"\"Each epoch will take about 1-2 minutes\"\"\"\n",
@@ -704,33 +712,18 @@
         "\n",
         "# The log below is the sample output for this section"
       ],
-      "execution_count": 50,
+      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Epoch:1, Training loss: 1988.61, train acc: 0.8926, val loss: 426.57, val acc: 0.8948, time: 15.58s\n",
-            "Epoch:2, Training loss: 1537.33, train acc: 0.9043, val loss: 447.11, val acc: 0.9053, time: 16.01s\n",
-            "Epoch:3, Training loss: 1312.22, train acc: 0.9164, val loss: 451.13, val acc: 0.9170, time: 15.93s\n",
-            "Epoch:4, Training loss: 1163.12, train acc: 0.9223, val loss: 475.21, val acc: 0.9233, time: 15.94s\n",
-            "Epoch:5, Training loss: 1036.39, train acc: 0.9312, val loss: 466.43, val acc: 0.9317, time: 15.24s\n",
-            "Epoch:6, Training loss: 928.36, train acc: 0.9398, val loss: 477.88, val acc: 0.9415, time: 16.31s\n",
-            "Epoch:7, Training loss: 842.75, train acc: 0.9424, val loss: 489.99, val acc: 0.9429, time: 14.94s\n",
-            "Epoch:8, Training loss: 747.36, train acc: 0.9526, val loss: 485.57, val acc: 0.9505, time: 14.97s\n",
-            "Epoch:9, Training loss: 657.37, train acc: 0.9568, val loss: 495.95, val acc: 0.9570, time: 14.17s\n",
-            "Epoch:10, Training loss: 586.87, train acc: 0.9621, val loss: 490.61, val acc: 0.9616, time: 15.72s\n",
-            "Epoch:11, Training loss: 512.23, train acc: 0.9675, val loss: 502.98, val acc: 0.9680, time: 15.74s\n",
-            "Epoch:12, Training loss: 455.56, train acc: 0.9743, val loss: 489.82, val acc: 0.9743, time: 14.42s\n",
-            "Epoch:13, Training loss: 404.23, train acc: 0.9759, val loss: 505.68, val acc: 0.9755, time: 15.71s\n",
-            "Epoch:14, Training loss: 344.14, train acc: 0.9801, val loss: 519.74, val acc: 0.9794, time: 15.20s\n",
-            "Epoch:15, Training loss: 322.71, train acc: 0.9845, val loss: 521.46, val acc: 0.9835, time: 15.77s\n",
-            "Epoch:16, Training loss: 285.50, train acc: 0.9874, val loss: 519.65, val acc: 0.9876, time: 14.87s\n",
-            "Epoch:17, Training loss: 253.15, train acc: 0.9888, val loss: 527.69, val acc: 0.9873, time: 15.19s\n",
-            "Epoch:18, Training loss: 243.29, train acc: 0.9879, val loss: 529.97, val acc: 0.9869, time: 15.10s\n",
-            "Epoch:19, Training loss: 203.84, train acc: 0.9912, val loss: 531.39, val acc: 0.9901, time: 15.21s\n",
-            "Epoch:20, Training loss: 193.89, train acc: 0.9927, val loss: 554.77, val acc: 0.9937, time: 14.91s\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-918f4081e957>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mtrain_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midxs\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_input_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mtags_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_output_index\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+          ]
         }
       ]
     },
